<resources>
    <string name="app_name">Decks</string>
    <string name="decks_button">Decks</string>
    <string name="word_of_the_day_button">Word-of-the-Day</string>
    <string name="lists_button">Lists</string>
    <string name="translate_button">Translate</string>
    <string name="phrases_button">Phrases</string>
    <string name="start">Start</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="login_dialog_email">Email: </string>
    <string name="login_dialog_password">Password: </string>
    <string name="login_dialog_login">Sign In</string>
    <string name="settings_changing_profile_settings">Changing user settings…</string>
    <string name="settings_uploading_avatar">Uploading avatar…</string>
    <string name="expansion_empty">This lesson does not have Expansion</string>
    <string name="grammar_empty">This lesson does not have Grammar</string>
    <string name="dialogue_empty">This lesson does not have Dialogue</string>
    <string name="download_study_lesson_button">Study Lesson</string>
    <string name="audio_is_downloading">Fetching and playing audio…</string>
    <string name="authentication_error">Authentication error. Please sign in again.</string>
    <string name="network_error">Network error. Please check your connection and try again.</string>
    <string name="network_error_or_audio_does_not_exist">Network error or audio file does not exist on server. Please check your connection. If you are connected, it may be no recording was made for your request.</string>
    <string name="local_storage">Device Storage</string>
    <string name="clear_cache_message">This will clear all your previous requests to the server. This will not delete any audio files, only lesson information. Do you want to continue?</string>
    <string name="clear_cache_title">Clear Cache</string>
    <string name="clear_audio_message">This will delete all the audio files that have been downloaded for Lessons and Vocabulary to free up space on your memory card. Do you want to continue?</string>
    <string name="clear_audio_title">Remove Audio Files</string>
    <string name="help_button_title">Help</string>
    <string name="cancel">Cancel</string>
	<string name="logout_button">Log out</string>
	<string name="change_avatar_button">Change avatar</string>
	<string name="upload_avatar_button">Upload</string>
	<string name="choose_avatar_button">Choose another</string>
	<string name="cancel_avatar_button">Cancel</string>
	<string name="notification_changed_successfully">Changed successfully</string>
	<string name="uploaded_successfully">Uploaded successfully</string>
	<string name="uploaded_unsuccessfully">Upload failed. Please try again later.</string>
	<string name="search_hint">Search…</string>
	<string name="version">Version </string>
    <string name="settings_contact_us">Please contact us with feedback, suggestions or bugs at android@chinesepod.com</string>
    <string name="drilldown">Breakdown</string>
    <string name="translate">Translate</string>
    <string name="save">Save</string>
	<string name="saved">Saved</string>
    <string name="record">Record</string>
    <string name="play_recorded">Listen</string>
	<string name="reference_lessons">Lessons</string>
    <string name="accuracy">Accuracy</string>
    <string name="compare_recorded_title">Speech Accuracy</string>
    <string name="compare_recorded_notice">Note: The Accuracy function depends on speech recognition technology which is not 100%% accurate. While this technology is not perfect, the higher your score the more likely you will be understood by a native speaker.</string>
    <string name="no_record">You haven\'t recorded this audio yet</string>
    <string name="problem_recording">Cannot record audio</string>
    <string name="press_start_for_recording">Press Start to begin recording.</string>
    <string name="recording">Recording</string>
    <string name="record_again">Record Again</string>
    <string name="stop_recording">Stop </string>
    <string name="start_recording">Start </string>
    <string name="save_recording">Save </string>
    <string name="filter_button_text">Filter</string>
    <string name="filter_show_bookmarked_lessons">Show Bookmarked Lessons</string>
    <string name="filter_show_subscribed_lessons">Show Subscribed Lessons</string>
    <string name="filter_show_studied_lessons">Included Studied Lessons</string>
	<string name="filter_show_only_downloaded_lessons">Only Downloaded Lessons</string>
    <string name="avatar_preference_label">Your ChinesePod Account Avatar</string>
    <string name="password_sent">An email has been sent to your email account containing your sign in information.</string>
	<string name="cannot_retrieve_password">Sorry, we were not able to use the password you entered to retrieve your password. Please try again and verify your email address and network settings.</string>
	<string name="enter_valid_email">Please enter a valid email address</string>
	<string name="enter_valid_password">Please enter your password</string>
	<string name="unable_to_retrieve_password">There is no such user with that email address. Please correct and try again.</string>
	<string name="retrieving_password">Retrieving Password</string>
	<string name="tasks_instructions"><![CDATA[Instructions: <br /><ul><li>Once you\'ve uploaded your task, please click \'share\' and you will have the option of sharing your task with other learners on ChinesePod or social media channels.</li> <li>You may see tasks uploaded by other learners by clicking \'Discuss This Lesson\'.</li> <li>If you are using a smartphone or tablet to shoot video tasks, please make sure that you are holding your device properly to avoid inverted images.</li></ul>]]></string>
	<string name="tasks_recording_prompt">Say something…</string>
	<string name="task_uploading">Uploading Task…</string>
	<string name="task_deleting">Deleting Task…</string>
	<string name="task_deleted_successfully">Task has been deleted</string>
	<string name="task_deleted_unsuccessfully">Task could not be deleted</string>
	<string name="task_sharing">Sharing your task on the discussion board…</string>
	<string name="task_shared_successfully">Task has been shared successfully</string>
	<string name="task_shared_unsuccessfully">Task could not be shared</string>
	<string name="task_share_message">Please leave a comment: </string>
	<string name="task_share_title">Discussion Board Sharing</string>
	<string name="task_submit_message">Please add a message for your teacher: </string>
	<string name="task_submit_title">Task Submission</string>
	<string name="task_submiting">Submiting task to your teacher…</string>
	<string name="task_submited_successfully">Task has been submited</string>
	<string name="task_submited_unsuccessfully">Task could not be submited</string>
	<string name="task_upload">Upload</string>
	<string name="task_share">Share</string>
	<string name="task_delete">Delete</string>
	<string name="task_submit">Submit</string>
	<string name="task_view">View</string>
	<string name="task_share_lesson_discussion">Share to the lesson discussion</string>
	<string name="task_share_social_networks">Share to social networks</string>
    <string name="lesson_plan_empty">This lesson does not have a practice plan</string>
    <string name="tasks_empty">This lesson does not have a task</string>
    <string name="camera">Camera</string>
    <string name="video_recorder">Video</string>
    <string name="file">File</string>
    <string name="upload">Upload</string>
    <string name="lesson_vocabulary_save_all">Save All</string>
    <string name="choose_deck">Choose a Deck</string>
    <string name="decks_are_receiving">Receiving list of decks…</string>
    <string name="word_adding">Adding word to your vocabulary…</string>
    <string name="word_adding_exists">The word already exists in your Vocabulary.</string>
    <string name="word_adding_error">There was an error adding the term</string>
    <string name="word_adding_failed">Failed to add term</string>
    <string name="word_adding_failed_offline">Failed to add term offline.</string>
    <string name="word_adding_succeed">Word added successfully!</string>
    <string name="words_adding">Adding words to your vocabulary…</string>
    <string name="words_adding_exists">These words already exist in your vocabulary.</string>
    <string name="words_adding_error">There was an error adding these words</string>
    <string name="words_adding_failed">Failed to add words</string>
    <string name="words_adding_succeed">Words were added successfully!</string>
    <string name="words_added_offline">You are offline, hence the terms have been saved for offline mode. Once you are online again and enter the Vocabulary section of the app, the deck will be synchronized automatically.</string>
    <string name="word_added_offline">You are offline, hence the term has been saved for offline mode. Once you are online again and enter the Vocabulary section of the app, the deck will be synchronized automatically.</string>
    <string name="messages_activity_title">Messages</string>
    <string name="no_messages">You don\'t have any messages yet…</string>
    <string name="message_compose">Compose</string>
    <string name="message_change_type">Change</string>
    <string name="message_type_inbox">Inbox</string>
    <string name="message_type_sent">Sent</string>
    <string name="message_type_archived">Archived</string>
    <string name="message_from">From:</string>
    <string name="message_to">To:</string>
    <string name="messages_view">View:</string>
    <string name="message_reply">Reply</string>
    <string name="message_replying">Sending message…</string>
    <string name="message_replied_successfully">Message was sent successfully</string>
    <string name="message_replied_unsuccessfully">There were problems sending your message</string>
    <string name="message_archive">Archive</string>
    <string name="message_archiving">Archiving the message…</string>
    <string name="message_archived_successfully">Archiving was successful</string>
    <string name="message_archived_unsuccessfully">There were problems archiving the message</string>
    <string name="messages_loading">Loading messages…</string>
    <string name="message_reply_title">Reply</string>
    <string name="message_reply_message">Please compose your message</string>
    <string name="message_delete">Delete</string>
    <string name="message_deleting">Deleting the message</string>
    <string name="message_deleted_successfully">Deletion was successful</string>
    <string name="message_deleted_unsuccessfully">There were problems deleting the message</string>
    <string name="glossary_activity_title">Glossary</string>
    <string name="glossary_more">Other Results</string>
	<string name="compare_recordings_original_sentence">Original Sentence:</string>
		<string name="compare_recordings_your_recording">Your Recording:</string>
	<string name="compare_recordings_accuracy">Accuracy:</string>
    <string name="move_term">Move</string>
    <string name="copy_term">Copy</string>
    <string name="signup_dialog_name">Name: </string>
    <string name="signup_dialog_signup">Create Account</string>
    <string name="create_account">Create Account</string>
    <string name="about_this_app">About this App</string>
    <string name="create_vocabulary_dialog_create_vocabulary">Create Vocabulary</string>
    <string name="create_vocabulary_source_hint">English</string>
    <string name="create_vocabulary_target_hint">Chinese</string>
    <string name="create_vocabulary_target_phonetics_hint">Pinyin</string>
    <string name="change_mode">Change Mode</string>
    <string name="delete_term">Delete Term</string>
    <string name="auto_review">Auto Review</string>
    <string name="shuffle_deck">Shuffle Deck</string>
    <string name="sync">Sync</string>
    <string name="manage_cards">Manage Cards</string>
</resources>