<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/action_manage_cards"
        android:showAsAction="never"
        android:title="@string/manage_cards"
        android:visible="false"/>
    <item
        android:id="@+id/action_change_mode"
        android:showAsAction="never"
        android:title="@string/change_mode"
        android:visible="false"/>
    <item
        android:id="@+id/action_settings"
        android:showAsAction="never"
        android:title="Settings"
        android:visible="true"/>
    <item
        android:id="@+id/action_move_term"
        android:showAsAction="never"
        android:title="@string/move_term"
        android:visible="true"/>
    <item
        android:id="@+id/action_copy_term"
        android:showAsAction="never"
        android:title="@string/copy_term"
        android:visible="true"/>
    <item
        android:id="@+id/action_delete_term"
        android:showAsAction="never"
        android:title="@string/delete_term"
        android:visible="true"/>
    <item
        android:id="@+id/action_auto_review"
        android:showAsAction="never"
        android:title="@string/auto_review"
        android:visible="true"/>
    <item
        android:id="@+id/action_shuffle_deck"
        android:showAsAction="never"
        android:title="@string/shuffle_deck"
        android:visible="true"/>
    <item
        android:id="@+id/action_sync"
        android:showAsAction="never"
        android:title="@string/sync"
        android:visible="false"/>
</menu>