<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" 
    android:layout_margin="20dp">

    <ImageView 
        android:id="@+id/avatarImageView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/default_avatar" /> 
    <LinearLayout
		android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="vertical">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/avatar_preference_label"
	        android:textSize="@dimen/avatar_pref_textSize" 
	        android:padding="10dp"
	        android:layout_marginLeft="@dimen/avatar_pref_text_marginLeft" />
	    <Button 
	        android:id="@+id/changeAvatarButton"
	        style="@style/BlackButton"
	        android:text="@string/change_avatar_button" 
	        android:layout_gravity="center"/>
	    <LinearLayout 
	        android:id="@+id/uploadChooseCancelLayout"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
		    android:visibility="gone"     
	        android:layout_gravity="center"
    		android:orientation="vertical">
		    <Button 
		        android:id="@+id/uploadAvatarButton"
	        	style="@style/BlackButton"
	        	android:text="@string/upload_avatar_button" 
	        	android:layout_width="200dp"
	        	android:layout_marginTop="2dp"
	        	android:layout_gravity="center"    />
		    <Button 
		        android:id="@+id/chooseAvatarButton"
	        	style="@style/BlackButton"
	        	android:text="@string/choose_avatar_button" 
	        	android:layout_width="200dp"
	        	android:layout_marginTop="10dp"
	        	android:layout_gravity="center"   />
		    <Button 
		        android:id="@+id/cancelAvatarButton"
	        	style="@style/BlackButton"
	        	android:layout_width="200dp"
	        	android:text="@string/cancel_avatar_button" 
	        	android:layout_marginTop="10dp"
	        	android:layout_gravity="center"     />
	        
	    </LinearLayout>
	            
    </LinearLayout>

</LinearLayout>